# T2Tree

./: CMakeLists.txt  README.md  build.sh
src/: ElementaryClasses.h  main.cpp
src/T2Tree/: T2Tree.cpp  T2Tree.h  Tools.cpp  Tools.h  WildcardRuleStorage.cpp  WildcardRuleStorage.h
